--- a/auth/package.json
+++ b/auth/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.9",
+    "@types/validator": "^13.1.1",
     "express": "^4.17.1",
+    "mongoose": "^5.11.8",
     "ts-node-dev": "^1.0.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "validator": "^13.5.2"
   }
 }
