--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -1,16 +1,23 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1beta1
+# apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-service
   annotations:
-    kubernetes.io/ingress.class: ngnix
-    ngnix.ingress.kubernetes.io/use-regex: "true"
+    kubernetes.io/ingress.class: nginx
+    # kubernetes.io/ingress.class: ngnix
+    # ngnix.ingress.kubernetes.io/use-regex: "true"
 spec:
   rules:
     - host: ticketing.dev
       http:
         paths:
-          - path: /api/users/?(.*)
+          #- path: /api/users/?(.*)
+          - path: /api/users/currentuser
+            backend:
+              serviceName: auth-srv
+              servicePort: 3000
+          - path: /api/users/signup
             backend:
               serviceName: auth-srv
               servicePort: 3000
