--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -15,6 +15,12 @@ spec:
       containers:
         - name: auth
           image: dvgy/auth
+          env:
+            - name: JWT_SECRET_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-secret-key
+                  key: JWT_SECRET_KEY
 ---
 apiVersion: v1
 kind: Service
