--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -3,7 +3,8 @@ ENV CI=true
 
 WORKDIR /app
 COPY package.json .
-RUN npm install
+#skips dev dependency
+RUN npm install --only=prod 
 COPY . .
 
 CMD ["npm","start"]
