--- a/auth/package.json
+++ b/auth/package.json
@@ -2,17 +2,27 @@
   "name": "shopme",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
-    "start": "ts-node-dev src/index.ts"
+    "start": "ts-node-dev src/server.ts",
+    "test": "jest --watchAll --no-cache"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./src/test/setup.ts"
+    ]
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.9",
     "@types/validator": "^13.1.1",
+    "@types/jsonwebtoken": "^8.5.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
@@ -23,7 +33,11 @@
     "validator": "^13.5.2"
   },
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.2",
-    "@types/jsonwebtoken": "^8.5.0"
+    "@types/jest": "^26.0.19",
+    "@types/supertest": "^2.0.10",
+    "jest": "^26.6.3",
+    "mongodb-memory-server": "^6.9.2",
+    "supertest": "^6.0.1",
+    "ts-jest": "^26.4.4"
   }
 }
