--- a/auth/package.json
+++ b/auth/package.json
@@ -21,8 +21,9 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.9",
-    "@types/validator": "^13.1.1",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/validator": "^13.1.1",
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
