--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -6,26 +6,18 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     # kubernetes.io/ingress.class: ngnix
-    # ngnix.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   rules:
     - host: ticketing.dev
       http:
         paths:
           #- path: /api/users/?(.*)
-          - path: /api/users/currentuser
+          - path: /api/users/?(.*)
             backend:
               serviceName: auth-srv
               servicePort: 3000
-          - path: /api/users/signup
+          - path: /?(.*)
             backend:
-              serviceName: auth-srv
-              servicePort: 3000
-          - path: /api/users/signin
-            backend:
-              serviceName: auth-srv
-              servicePort: 3000
-          - path: /api/users/signout
-            backend:
-              serviceName: auth-srv
+              serviceName: client-srv
               servicePort: 3000
