--- a/tickets/package.json
+++ b/tickets/package.json
@@ -25,10 +25,12 @@
     "@types/validator": "^13.1.1",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
+    "common-ticketing": "^1.0.3",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
+    "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.1.2",
     "validator": "^13.5.2"
