handle event listners and publish event in tickets and orders service

--- a/common/package.json
+++ b/common/package.json
@@ -1,7 +1,7 @@
 {
   "name": "common-ticketing",
-  "version": "1.0.6",
-  "description": "",
+  "version": "1.0.14",
+  "description": "utility functions for services",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
   "files": [
