--- a/payments/package.json
+++ b/payments/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "orders",
+  "name": "tickets",
   "version": "1.0.0",
   "description": "",
   "main": "server.ts",
@@ -32,6 +32,7 @@
     "mongoose": "^5.11.8",
     "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
+    "stripe": "^8.144.0",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.1.2",
     "validator": "^13.5.2"
