--- a/.github/workflows/tests-auth.yaml
+++ b/.github/workflows/tests-auth.yaml
@@ -1,7 +1,7 @@
 
 # This is a basic workflow to help you get started with Actions
 
-name: tests
+name: tests-auth
 
 # Controls when the action will run. 
 on:
