--- a/.github/workflows/tests-orders.yaml
+++ b/.github/workflows/tests-orders.yaml
@@ -1,12 +1,12 @@
-
 # This is a basic workflow to help you get started with Actions
 
 name: tests-orders
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
-  pull_request
-
+  pull_request:
+    paths:
+      - 'orders/**'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
