--- a/.github/workflows/tests-tickets.yaml
+++ b/.github/workflows/tests-tickets.yaml
@@ -2,15 +2,17 @@
 
 name: tests-tickets
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
-  pull_request
+  pull_request:
+    paths:
+      - 'tickets/**'
   # Triggers the workflow on push or pull request events but only for the master branch
   #pull_request:
-   # branches: [ master ]
+  # branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
- # workflow_dispatch:
+  # workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
