--- a/.github/workflows/deploy-auth.yaml
+++ b/.github/workflows/deploy-auth.yaml
@@ -18,6 +18,10 @@ jobs:
           DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
           DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       - run: docker push dvgy/auth    
-          
+      - uses: digitalocean/action-doctl@v2
+        with: 
+          token: ${{secrets.DIGITAL_OCEAN_ACCESS_TOKEN}}
+      - run: doctl kubernetes cluster kubeconfig save ticketing-app
+      - run: kubectl rollout restart deployment auth-depl
       
       
